fix(css): incorrect css applied to dark mode

--- a/ui/src/css/QWindow.sass
+++ b/ui/src/css/QWindow.sass
@@ -248,7 +248,7 @@ body
 
 .q-dark div,
 .body--dark div,
-.q-window--dark,
+.q-window--dark
   .gripper
     background-color: $gripper-background-color-dark
     border: $gripper-border-dark
